# django_project

./: README.md  pyproject.toml  settings.toml
app_projeto/: apps.py  forms.py  models.py  views.py
app_projeto/migrations/: 0001_initial.py  0002_itens_deleted_at_listas_deleted_at.py  0003_itens_status.py  0004_remove_itens_status_postagens.py  0005_itens_is_done_delete_postagens.py
app_projeto/templates/: base_generic.html  success.html
app_projeto/templates/auth/: login.html  signup.html
app_projeto/templates/home/: home.html
app_projeto/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
app_projeto/templates/to_do_list/: list_detail.html  list_itens.html  lists.html
djangoProject/: asgi.py  settings.py  urls.py  views.py  wsgi.py
djangoProject/db_models/: user.py
static/: login.css
static/style/: style.css
static/style/to_do_list/: list_detail.css  lists.css
templates/: login.html  signup.html
