[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = [
"alanr <alanrios2001@gmail.com>",
"",
"",
"",
"",
"",
"",
"",
"",
""
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
mysqlclient = "^2.2.4"
dynaconf = "^3.2.4"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
